Finalize LMS updates and fixes